# rust-sqlite-experiment

./: .drone.yml  .gitignore  up.sql
diesel/: Cargo.toml
diesel/src/: connection_pool.rs  main.rs  repository.rs
rusqlite/: Cargo.toml
rusqlite/src/: connection_pool.rs  main.rs  repository.rs
